[package]
name = "zwift_capture"
version = "0.1.0"
authors = ["Maksim Sch <maks777s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.22.0"
pcap = { version = "0.8.1" }
etherparse = "0.9.0"
serde = { version = "1.0.62", features = ["derive"] }
serde_json = "1.0.62"
