[package]
name = "zwift_capture"
version = "0.1.1"
authors = ["Maksim Sch <maks777s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.22.0"
pcap = { version = "0.9.1" }
etherparse = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"

[dev-dependencies]
hex-literal = "0.3.3"
